// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/ > (locale: en) > renders correctly 1`] = `
"<div>
  <div data-orientation="vertical" data-slot="root" class="relative isolate">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
      <div data-slot="wrapper" class="text-center">
        <div data-slot="header" class="">
          <!--v-if-->
          <h1 data-slot="title" class="text-5xl sm:text-7xl text-pretty tracking-tight font-bold text-highlighted">DDRadar</h1>
          <div data-slot="description" class="text-lg sm:text-xl/8 text-muted text-balance mt-6">Simple, fast tool to record, analyze, and share your DDR scores.</div>
        </div>
        <!--v-if-->
        <div data-slot="footer" class="mt-10">
          <div data-slot="links" class="flex flex-wrap gap-x-6 gap-y-3 justify-center"><a href="/login" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-base gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary"><span class="iconify i-lucide:user shrink-0 size-6" aria-hidden="true" data-slot="leadingIcon"></span><span data-slot="label" class="truncate">Login</span>
              <!--v-if-->
            </a></div>
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <section data-orientation="vertical" data-slot="root" class="relative isolate">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16" data-slot="container">
      <div data-slot="wrapper" class="">
        <div data-slot="header" class="">
          <!--v-if-->
          <!--v-if-->
          <h2 data-slot="title" class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-center">Features</h2>
          <!--v-if-->
        </div>
        <div data-slot="body" class="mt-16">
          <ul data-slot="features" class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
            <li data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
              <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-lucide:pie-chart size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">My Groove Radar</div>
                <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">Recreate the Groove Radar feature removed since DDR A. Check and share your skills.</div>
              </div>
            </li>
            <li data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
              <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-lucide:arrow-up-0-1 size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">Native EX Score Support</div>
                <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">Supports recording EX scores. You can also perform predictive calculations from normal scores and full combo types.</div>
              </div>
            </li>
            <li data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
              <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-simple-icons:github size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">Open Source</div>
                <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">DDRadar is an open source project. You can view and contribute to the source code on GitHub.</div>
              </div>
            </li>
          </ul>
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </section>
</div>"
`;

exports[`/ > (locale: ja) > renders correctly 1`] = `
"<div>
  <div data-orientation="vertical" data-slot="root" class="relative isolate">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
      <div data-slot="wrapper" class="text-center">
        <div data-slot="header" class="">
          <!--v-if-->
          <h1 data-slot="title" class="text-5xl sm:text-7xl text-pretty tracking-tight font-bold text-highlighted">DDRadar</h1>
          <div data-slot="description" class="text-lg sm:text-xl/8 text-muted text-balance mt-6">あなたのDDRスコアを記録・分析・共有するシンプル/高速なツール。</div>
        </div>
        <!--v-if-->
        <div data-slot="footer" class="mt-10">
          <div data-slot="links" class="flex flex-wrap gap-x-6 gap-y-3 justify-center"><a href="/login" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-base gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary"><span class="iconify i-lucide:user shrink-0 size-6" aria-hidden="true" data-slot="leadingIcon"></span><span data-slot="label" class="truncate">ログイン</span>
              <!--v-if-->
            </a></div>
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <section data-orientation="vertical" data-slot="root" class="relative isolate">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16" data-slot="container">
      <div data-slot="wrapper" class="">
        <div data-slot="header" class="">
          <!--v-if-->
          <!--v-if-->
          <h2 data-slot="title" class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-center">主な機能</h2>
          <!--v-if-->
        </div>
        <div data-slot="body" class="mt-16">
          <ul data-slot="features" class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
            <li data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
              <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-lucide:pie-chart size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">My グルーヴレーダー</div>
                <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">DDR A以降で廃止されたグルーヴレーダー機能を再現。自分の実力を確認・共有しましょう。</div>
              </div>
            </li>
            <li data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
              <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-lucide:arrow-up-0-1 size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">EXスコアにネイティブ対応</div>
                <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">EXスコアの記録に対応。通常スコア・フルコンボ種別からの予測計算もできます。</div>
              </div>
            </li>
            <li data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
              <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-simple-icons:github size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">オープンソース</div>
                <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">DDRadarはオープンソースプロジェクトです。GitHubでソースコードを確認・貢献できます。</div>
              </div>
            </li>
          </ul>
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </section>
</div>"
`;
